fixed navbar visibility at 480px

--- a/css/screenwidth.css
+++ b/css/screenwidth.css
@@ -77,7 +77,7 @@
   
       .nav-bar-grid{
         display:grid;
-        height: 10vh;
+        height: 20vh;
         grid-template-rows: 2fr 0fr 4fr;
         
       grid-template-areas: 
@@ -133,6 +133,6 @@
     white-space: nowrap;
     font-size: 2vh;
   }
-
+  
 
 }
